--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,8 @@ header .saite-contacts {
   background: #f5f4fa;
 }
 .we {
+  padding: 0px;
+  margin: 0;
   color: var(--team-color);
 }
 .we-1 {
@@ -294,6 +296,8 @@ header .saite-contacts {
   line-height: 1.18;
   text-align: center;
   display: flex;
+  padding: 50px;
+  margin-left: 90px;
 }
 h3 {
   font-family: Roboto;
@@ -304,9 +308,12 @@ h3 {
   color: var(--title-color);
 }
 .team-card {
+  margin-left: 30px;
   background-color: var(--white-color-text);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-card-title {
   font-weight: var(--secondary--font-weight);
